--- a/package.json
+++ b/package.json
@@ -9,14 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.1",
     "next": "12.1.4",
+    "next-absolute-url": "^1.2.2",
+    "next-redux-wrapper": "^7.0.5",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "react-js-pagination": "^3.0.3",
+    "react-redux": "^7.2.8",
+    "react-toastify": "^8.2.0"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
     "@types/react": "18.0.0",
     "@types/react-dom": "18.0.0",
+    "@types/react-js-pagination": "^3.0.4",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.4",
     "typescript": "4.6.3"
