--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
+    "@types/react-datepicker": "^4.4.0",
     "next": "12.1.4",
     "next-absolute-url": "^1.2.2",
     "next-redux-wrapper": "^7.0.5",
     "react": "18.0.0",
+    "react-bootstrap": "^2.2.3",
+    "react-datepicker": "^4.7.0",
     "react-dom": "18.0.0",
     "react-js-pagination": "^3.0.3",
     "react-redux": "^7.2.8",
